snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1-all.jar.sha256
f10bb6cce15f8b924fb4ef13fb78f39e8bb23124b1af2b3ed41aa1d7637166bb